--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </head>
 
 <body>
-  <script src="https://lib.baomitu.com/jquery/3.5.0/jquery.min.js"></script>
-  <script src="https://lib.baomitu.com/echarts/4.7.0/echarts.min.js"></script>
+  <script src="https://https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/echarts@4.7.0/dist/echarts.min.js"></script>
   <script>
     
   </script>
